--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/router": "^0.0.1-beta.83",
     "clsx": "^1.2.1",
     "jotai": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "zod": "^3.21.4",
     "zustand": "^4.3.6"
