--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/router": "^0.0.1-beta.83",
     "clsx": "^1.2.1",
     "jotai": "^2.0.3",
