--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "challenges",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.0.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "@tanstack/router": "^0.0.1-beta.83",
-    "clsx": "^1.2.1",
-    "jotai": "^2.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.8",
-    "react-icons": "^4.8.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.9.0",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.6"
-  },
-  "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
-  }
+    "name": "challenges",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.9",
+        "@tanstack/router": "^0.0.1-beta.83",
+        "clsx": "^1.2.1",
+        "jotai": "^2.0.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.43.8",
+        "react-icons": "^4.8.0",
+        "react-query": "^3.39.3",
+        "react-router-dom": "^6.9.0",
+        "zod": "^3.21.4",
+        "zustand": "^4.3.6"
+    },
+    "devDependencies": {
+        "@types/node": "^18.15.11",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.58.0",
+        "@typescript-eslint/parser": "^5.58.0",
+        "@vitejs/plugin-react": "^3.1.0",
+        "autoprefixer": "^10.4.14",
+        "eslint": "^8.38.0",
+        "eslint-plugin-react": "^7.32.2",
+        "postcss": "^8.4.21",
+        "prettier": "^2.8.7",
+        "tailwindcss": "^3.2.7",
+        "typescript": "^4.9.3",
+        "vite": "^4.2.0"
+    }
 }
