--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "zustand": "^4.3.6"
     },
     "devDependencies": {
+        "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
         "@types/node": "^18.15.11",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
@@ -36,6 +37,7 @@
         "eslint-plugin-react": "^7.32.2",
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
+        "prettier-plugin-tailwindcss": "^0.2.7",
         "tailwindcss": "^3.2.7",
         "typescript": "^4.9.3",
         "vite": "^4.2.0"
